# llm

./: .gitignore  .mcp.json  DI_refactor.md  README.md  chats.md  claudelinks.txt  context2  ctx  debug_analysis.md  demo_idl_refactoring_workflow.py  fix.md  gdiff  index.md  main.py  md_file_analysis_results.txt  memory.md  p.patch  plan.md  planning_memory.md  planning_workflow.md  planning_workflow_3.md  progress.md  project_rules.md  provider-agnostic-handler-spec.md  pyproject.toml  pytest.ini  sexp_director_evaluator_ADR.md  specprompts2.json  test_aider_integration.py  test_matching.py
PRDs/: aider_integration.md  context_query_separation.md  debug_fix_repl_loop.md  sexp_repl.md
aider_bridge/: __init__.py  automatic.py  bridge.py  interactive.py  result_formatter.py  tools.py
devdocs/: hierarchical_system_prompt.md
docs/: IDL.md  README.md  TESTING_CONVENTIONS.MD  TODOS.md  commitsizes.sh  context  ctx  documentation_update.md  impl_checklist.md  implementation_rules.md  inconsistencies.md  index.md  memory.md  migration.txt  plan.md.bk  process.md  progress.md  refactor.md  scratch  scratch.txt  spec_prompt_guide.xml  specprompts.json  start_here.md  tmp  types.md
evaluator/: evaluator.py  interfaces.py
handler/: __init__.py  base_handler.py  model_provider.py  passthrough_handler.py
issues/: basename_matching.md
memory/: memory_system.py
misc/: debug_log.md  operators.md
plans/: atomic_task_subtypes.md  fix_debug_and_sexps.md  function_call_refactoring.md  general_improvements.md  workflows.md  wrap_context_content_with_tags.md
repl/: repl.py
(+320 files in other folders)
